add tag compatibility for PRs

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,14 +31,16 @@ jobs:
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
+        env:
+          BRANCH_NAME: ${{ github.head_ref || github.ref_name }} 
         with:
           images: ravnoor/dnscrypt-server 
           tags: |
-            type=semver,pattern={{version}}
+            type=semver,pattern={{ version }}
             # dynamically set the branch name as a prefix
-            type=sha,prefix={{branch}}-
+            type=sha,prefix=${BRANCH_NAME}-
             # dynamically set the branch name
-            type=raw,value={{branch}}-latest
+            type=raw,value=${BRANCH_NAME}-latest
             # set the latest branch name
             type=raw,value=latest
 
